Bug 67269 - EDITING: PostgreSQL - SDBC Autovalue isn't shown and isn't refreshed any more
Summary: EDITING: PostgreSQL - SDBC Autovalue isn't shown and isn't refreshed any more
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.0.3.1 rc
Hardware: Other All
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.2.0 target:4.1.1 target:4.0.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-07-24 19:07 UTC by Robert Großkopf
Modified: 2022-12-12 07:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2013-07-24 19:07:44 UTC
Create a table in postgresql with LO → Tools → SQL like 
CREATE TABLE name ( id SERIAL, name VARCHAR(50), PRIMARY KEY (id) );
Open this table with LO 4.0.2.2 or any version before. The field "id" is shown with "AutoField". You could enter data in the field "name". "id" is created automatically.

Since LO 4.0.3.3 field "id" isn't shown as "AutoField". You could enter data in the field "name". "id" shows for every row '0'. If you refresh the table "id" shows the right incremented values.
Comment 1 Robert Großkopf 2013-07-24 19:10:00 UTC
This bug has confirmed here:
https://bugs.freedesktop.org/show_bug.cgi?id=66662
Comment 2 Robert Großkopf 2013-07-24 19:21:57 UTC
Have tested a little bit more. Last working version is LO 4.0.2.2, first available version with this bug is 4.0.3.1
Comment 3 Commit Notification 2013-07-25 13:43:50 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fc1b46e03f9b93a6b9ad6f9cc25bf8066715088f

fdo#67269 adapt checkTable to getTableName change



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-07-25 17:51:53 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cb859a727dd796f5c9d47deb860df8b25b17fe97&h=libreoffice-4-1

fdo#67269 adapt checkTable to getTableName change


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-07-25 17:52:12 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c39c9c8ca312e569066e9d717c00bc99613b3189&h=libreoffice-4-0

fdo#67269 adapt checkTable to getTableName change


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.