fdo#67269 adapt checkTable to getTableName change

getTableName used to return schema.table;
now it returns just table
But tables are indexed by schema.table in getTables(), so reconstruct that for the lookup.

Change-Id: I53da1e43762b3a470e34b5dfdb0e1bb3dc914780
Reviewed-on: https://gerrit.libreoffice.org/5100
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>